--- a/index.html
+++ b/index.html
@@ -100,7 +100,29 @@
   </div>
     
 
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.7.1/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
 
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyD4dqAeMKX1ynMe4XvJEnlj1u3-7tw8QdI",
+    authDomain: "submission-report.firebaseapp.com",
+    projectId: "submission-report",
+    storageBucket: "submission-report.firebasestorage.app",
+    messagingSenderId: "752119232313",
+    appId: "1:752119232313:web:d062ab2da259aaf3bcdae8",
+    measurementId: "G-9JKRJQXZXX"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="script.js"></script>
